feat: 新增 3 支 foodRecord api
1. 新增 3 支 foodRecord api > 分享一筆美食紀錄給好友、取得登入會員所有被分享美食、變更分享美食狀態
2. 撰寫 swagger 註解
